# mini-ml-parser

./: .gitignore  LICENSE  README.md  dune-project  flake.nix  mini_ml_parser.opam
lib/: ast.ml  dune  lexer.ml  lexer.re2c  mini_ml.ml  parser.mly
